deploy: c96c7ebc3961e2134bdde27f37cda5bc74a2b310

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:34.481170Z",
-     "iopub.status.busy": "2025-07-29T09:17:34.480943Z",
-     "iopub.status.idle": "2025-07-29T09:17:35.416122Z",
-     "shell.execute_reply": "2025-07-29T09:17:35.415627Z"
+     "iopub.execute_input": "2025-07-29T09:27:43.482470Z",
+     "iopub.status.busy": "2025-07-29T09:27:43.482284Z",
+     "iopub.status.idle": "2025-07-29T09:27:44.470655Z",
+     "shell.execute_reply": "2025-07-29T09:27:44.470127Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:35.417868Z",
-     "iopub.status.busy": "2025-07-29T09:17:35.417640Z",
-     "iopub.status.idle": "2025-07-29T09:17:35.725985Z",
-     "shell.execute_reply": "2025-07-29T09:17:35.725405Z"
+     "iopub.execute_input": "2025-07-29T09:27:44.472443Z",
+     "iopub.status.busy": "2025-07-29T09:27:44.472202Z",
+     "iopub.status.idle": "2025-07-29T09:27:44.813392Z",
+     "shell.execute_reply": "2025-07-29T09:27:44.812782Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:35.727741Z",
-     "iopub.status.busy": "2025-07-29T09:17:35.727572Z",
-     "iopub.status.idle": "2025-07-29T09:17:35.864943Z",
-     "shell.execute_reply": "2025-07-29T09:17:35.864362Z"
+     "iopub.execute_input": "2025-07-29T09:27:44.815157Z",
+     "iopub.status.busy": "2025-07-29T09:27:44.814988Z",
+     "iopub.status.idle": "2025-07-29T09:27:44.959268Z",
+     "shell.execute_reply": "2025-07-29T09:27:44.958677Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:35.866609Z",
-     "iopub.status.busy": "2025-07-29T09:17:35.866443Z",
-     "iopub.status.idle": "2025-07-29T09:17:36.266005Z",
-     "shell.execute_reply": "2025-07-29T09:17:36.265443Z"
+     "iopub.execute_input": "2025-07-29T09:27:44.961016Z",
+     "iopub.status.busy": "2025-07-29T09:27:44.960831Z",
+     "iopub.status.idle": "2025-07-29T09:27:45.365696Z",
+     "shell.execute_reply": "2025-07-29T09:27:45.365179Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:36.267680Z",
-     "iopub.status.busy": "2025-07-29T09:17:36.267505Z",
-     "iopub.status.idle": "2025-07-29T09:17:36.555311Z",
-     "shell.execute_reply": "2025-07-29T09:17:36.554804Z"
+     "iopub.execute_input": "2025-07-29T09:27:45.367338Z",
+     "iopub.status.busy": "2025-07-29T09:27:45.367164Z",
+     "iopub.status.idle": "2025-07-29T09:27:45.657467Z",
+     "shell.execute_reply": "2025-07-29T09:27:45.656869Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:36.557009Z",
-     "iopub.status.busy": "2025-07-29T09:17:36.556850Z",
-     "iopub.status.idle": "2025-07-29T09:17:36.559311Z",
-     "shell.execute_reply": "2025-07-29T09:17:36.558728Z"
+     "iopub.execute_input": "2025-07-29T09:27:45.659276Z",
+     "iopub.status.busy": "2025-07-29T09:27:45.659096Z",
+     "iopub.status.idle": "2025-07-29T09:27:45.661364Z",
+     "shell.execute_reply": "2025-07-29T09:27:45.660924Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:36.560765Z",
-     "iopub.status.busy": "2025-07-29T09:17:36.560600Z",
-     "iopub.status.idle": "2025-07-29T09:17:36.563542Z",
-     "shell.execute_reply": "2025-07-29T09:17:36.562955Z"
+     "iopub.execute_input": "2025-07-29T09:27:45.662896Z",
+     "iopub.status.busy": "2025-07-29T09:27:45.662726Z",
+     "iopub.status.idle": "2025-07-29T09:27:45.665247Z",
+     "shell.execute_reply": "2025-07-29T09:27:45.664807Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:36.564960Z",
-     "iopub.status.busy": "2025-07-29T09:17:36.564794Z",
-     "iopub.status.idle": "2025-07-29T09:17:37.610347Z",
-     "shell.execute_reply": "2025-07-29T09:17:37.609864Z"
+     "iopub.execute_input": "2025-07-29T09:27:45.666714Z",
+     "iopub.status.busy": "2025-07-29T09:27:45.666532Z",
+     "iopub.status.idle": "2025-07-29T09:27:46.729033Z",
+     "shell.execute_reply": "2025-07-29T09:27:46.728525Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpXx0eoz\", R: \"/tmp/RtmpcV5kmN\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpFHJWyG\", R: \"/tmp/RtmpLrwaGn\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:37.611975Z",
-     "iopub.status.busy": "2025-07-29T09:17:37.611820Z",
-     "iopub.status.idle": "2025-07-29T09:17:38.009671Z",
-     "shell.execute_reply": "2025-07-29T09:17:38.009119Z"
+     "iopub.execute_input": "2025-07-29T09:27:46.730797Z",
+     "iopub.status.busy": "2025-07-29T09:27:46.730618Z",
+     "iopub.status.idle": "2025-07-29T09:27:47.141036Z",
+     "shell.execute_reply": "2025-07-29T09:27:47.140531Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:38.011270Z",
-     "iopub.status.busy": "2025-07-29T09:17:38.011101Z",
-     "iopub.status.idle": "2025-07-29T09:17:38.321976Z",
-     "shell.execute_reply": "2025-07-29T09:17:38.321390Z"
+     "iopub.execute_input": "2025-07-29T09:27:47.142768Z",
+     "iopub.status.busy": "2025-07-29T09:27:47.142557Z",
+     "iopub.status.idle": "2025-07-29T09:27:47.451952Z",
+     "shell.execute_reply": "2025-07-29T09:27:47.451300Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:38.323586Z",
-     "iopub.status.busy": "2025-07-29T09:17:38.323427Z",
-     "iopub.status.idle": "2025-07-29T09:17:38.330508Z",
-     "shell.execute_reply": "2025-07-29T09:17:38.329924Z"
+     "iopub.execute_input": "2025-07-29T09:27:47.453674Z",
+     "iopub.status.busy": "2025-07-29T09:27:47.453473Z",
+     "iopub.status.idle": "2025-07-29T09:27:47.460828Z",
+     "shell.execute_reply": "2025-07-29T09:27:47.460362Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:17:38.332024Z",
-     "iopub.status.busy": "2025-07-29T09:17:38.331874Z",
-     "iopub.status.idle": "2025-07-29T09:17:38.741621Z",
-     "shell.execute_reply": "2025-07-29T09:17:38.741119Z"
+     "iopub.execute_input": "2025-07-29T09:27:47.462252Z",
+     "iopub.status.busy": "2025-07-29T09:27:47.462104Z",
+     "iopub.status.idle": "2025-07-29T09:27:47.883419Z",
+     "shell.execute_reply": "2025-07-29T09:27:47.882814Z"
     }
    },
    "outputs": [
