--- a/examples/example09_joss_paper.ipynb
+++ b/examples/example09_joss_paper.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:03.180095Z",
-     "iopub.status.busy": "2025-07-29T09:18:03.179938Z",
-     "iopub.status.idle": "2025-07-29T09:18:04.140555Z",
-     "shell.execute_reply": "2025-07-29T09:18:04.139889Z"
+     "iopub.execute_input": "2025-07-29T09:28:12.153556Z",
+     "iopub.status.busy": "2025-07-29T09:28:12.153322Z",
+     "iopub.status.idle": "2025-07-29T09:28:13.088243Z",
+     "shell.execute_reply": "2025-07-29T09:28:13.087741Z"
     }
    },
    "outputs": [],
@@ -146,10 +146,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:04.142620Z",
-     "iopub.status.busy": "2025-07-29T09:18:04.142358Z",
-     "iopub.status.idle": "2025-07-29T09:18:04.160953Z",
-     "shell.execute_reply": "2025-07-29T09:18:04.160398Z"
+     "iopub.execute_input": "2025-07-29T09:28:13.090193Z",
+     "iopub.status.busy": "2025-07-29T09:28:13.089949Z",
+     "iopub.status.idle": "2025-07-29T09:28:13.108394Z",
+     "shell.execute_reply": "2025-07-29T09:28:13.107947Z"
     }
    },
    "outputs": [],
@@ -174,10 +174,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:04.162623Z",
-     "iopub.status.busy": "2025-07-29T09:18:04.162466Z",
-     "iopub.status.idle": "2025-07-29T09:18:04.165088Z",
-     "shell.execute_reply": "2025-07-29T09:18:04.164531Z"
+     "iopub.execute_input": "2025-07-29T09:28:13.109958Z",
+     "iopub.status.busy": "2025-07-29T09:28:13.109804Z",
+     "iopub.status.idle": "2025-07-29T09:28:13.112192Z",
+     "shell.execute_reply": "2025-07-29T09:28:13.111774Z"
     }
    },
    "outputs": [],
@@ -192,10 +192,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:04.166573Z",
-     "iopub.status.busy": "2025-07-29T09:18:04.166423Z",
-     "iopub.status.idle": "2025-07-29T09:18:04.877159Z",
-     "shell.execute_reply": "2025-07-29T09:18:04.876536Z"
+     "iopub.execute_input": "2025-07-29T09:28:13.113732Z",
+     "iopub.status.busy": "2025-07-29T09:28:13.113553Z",
+     "iopub.status.idle": "2025-07-29T09:28:13.836236Z",
+     "shell.execute_reply": "2025-07-29T09:28:13.835666Z"
     }
    },
    "outputs": [
@@ -289,10 +289,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:04.878897Z",
-     "iopub.status.busy": "2025-07-29T09:18:04.878720Z",
-     "iopub.status.idle": "2025-07-29T09:18:05.532467Z",
-     "shell.execute_reply": "2025-07-29T09:18:05.531916Z"
+     "iopub.execute_input": "2025-07-29T09:28:13.837975Z",
+     "iopub.status.busy": "2025-07-29T09:28:13.837799Z",
+     "iopub.status.idle": "2025-07-29T09:28:14.442792Z",
+     "shell.execute_reply": "2025-07-29T09:28:14.442029Z"
     }
    },
    "outputs": [],
@@ -319,10 +319,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:05.534418Z",
-     "iopub.status.busy": "2025-07-29T09:18:05.534235Z",
-     "iopub.status.idle": "2025-07-29T09:18:05.922393Z",
-     "shell.execute_reply": "2025-07-29T09:18:05.921821Z"
+     "iopub.execute_input": "2025-07-29T09:28:14.444987Z",
+     "iopub.status.busy": "2025-07-29T09:28:14.444752Z",
+     "iopub.status.idle": "2025-07-29T09:28:14.842751Z",
+     "shell.execute_reply": "2025-07-29T09:28:14.842121Z"
     }
    },
    "outputs": [
@@ -453,10 +453,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:05.924074Z",
-     "iopub.status.busy": "2025-07-29T09:18:05.923905Z",
-     "iopub.status.idle": "2025-07-29T09:18:06.258315Z",
-     "shell.execute_reply": "2025-07-29T09:18:06.257789Z"
+     "iopub.execute_input": "2025-07-29T09:28:14.844506Z",
+     "iopub.status.busy": "2025-07-29T09:28:14.844344Z",
+     "iopub.status.idle": "2025-07-29T09:28:15.172451Z",
+     "shell.execute_reply": "2025-07-29T09:28:15.171960Z"
     }
    },
    "outputs": [
@@ -507,10 +507,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:06.260003Z",
-     "iopub.status.busy": "2025-07-29T09:18:06.259832Z",
-     "iopub.status.idle": "2025-07-29T09:18:10.443701Z",
-     "shell.execute_reply": "2025-07-29T09:18:10.443204Z"
+     "iopub.execute_input": "2025-07-29T09:28:15.174088Z",
+     "iopub.status.busy": "2025-07-29T09:28:15.173926Z",
+     "iopub.status.idle": "2025-07-29T09:28:19.305502Z",
+     "shell.execute_reply": "2025-07-29T09:28:19.304952Z"
     }
    },
    "outputs": [
@@ -567,17 +567,17 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:18:10.445340Z",
-     "iopub.status.busy": "2025-07-29T09:18:10.445180Z",
-     "iopub.status.idle": "2025-07-29T09:18:10.907408Z",
-     "shell.execute_reply": "2025-07-29T09:18:10.906928Z"
+     "iopub.execute_input": "2025-07-29T09:28:19.307258Z",
+     "iopub.status.busy": "2025-07-29T09:28:19.307075Z",
+     "iopub.status.idle": "2025-07-29T09:28:19.783898Z",
+     "shell.execute_reply": "2025-07-29T09:28:19.783291Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f169dfd54d0>"
+       "<matplotlib.legend.Legend at 0x7f7ac7c8b350>"
       ]
      },
      "execution_count": 9,
