--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:43.482470Z",
-     "iopub.status.busy": "2025-07-29T09:27:43.482284Z",
-     "iopub.status.idle": "2025-07-29T09:27:44.470655Z",
-     "shell.execute_reply": "2025-07-29T09:27:44.470127Z"
+     "iopub.execute_input": "2025-07-29T21:22:08.996142Z",
+     "iopub.status.busy": "2025-07-29T21:22:08.995982Z",
+     "iopub.status.idle": "2025-07-29T21:22:09.939708Z",
+     "shell.execute_reply": "2025-07-29T21:22:09.939117Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:44.472443Z",
-     "iopub.status.busy": "2025-07-29T09:27:44.472202Z",
-     "iopub.status.idle": "2025-07-29T09:27:44.813392Z",
-     "shell.execute_reply": "2025-07-29T09:27:44.812782Z"
+     "iopub.execute_input": "2025-07-29T21:22:09.941511Z",
+     "iopub.status.busy": "2025-07-29T21:22:09.941267Z",
+     "iopub.status.idle": "2025-07-29T21:22:10.253124Z",
+     "shell.execute_reply": "2025-07-29T21:22:10.252562Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:44.815157Z",
-     "iopub.status.busy": "2025-07-29T09:27:44.814988Z",
-     "iopub.status.idle": "2025-07-29T09:27:44.959268Z",
-     "shell.execute_reply": "2025-07-29T09:27:44.958677Z"
+     "iopub.execute_input": "2025-07-29T21:22:10.254845Z",
+     "iopub.status.busy": "2025-07-29T21:22:10.254679Z",
+     "iopub.status.idle": "2025-07-29T21:22:10.392684Z",
+     "shell.execute_reply": "2025-07-29T21:22:10.392124Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:44.961016Z",
-     "iopub.status.busy": "2025-07-29T09:27:44.960831Z",
-     "iopub.status.idle": "2025-07-29T09:27:45.365696Z",
-     "shell.execute_reply": "2025-07-29T09:27:45.365179Z"
+     "iopub.execute_input": "2025-07-29T21:22:10.394425Z",
+     "iopub.status.busy": "2025-07-29T21:22:10.394259Z",
+     "iopub.status.idle": "2025-07-29T21:22:10.794216Z",
+     "shell.execute_reply": "2025-07-29T21:22:10.793710Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:45.367338Z",
-     "iopub.status.busy": "2025-07-29T09:27:45.367164Z",
-     "iopub.status.idle": "2025-07-29T09:27:45.657467Z",
-     "shell.execute_reply": "2025-07-29T09:27:45.656869Z"
+     "iopub.execute_input": "2025-07-29T21:22:10.795911Z",
+     "iopub.status.busy": "2025-07-29T21:22:10.795752Z",
+     "iopub.status.idle": "2025-07-29T21:22:11.079124Z",
+     "shell.execute_reply": "2025-07-29T21:22:11.078614Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:45.659276Z",
-     "iopub.status.busy": "2025-07-29T09:27:45.659096Z",
-     "iopub.status.idle": "2025-07-29T09:27:45.661364Z",
-     "shell.execute_reply": "2025-07-29T09:27:45.660924Z"
+     "iopub.execute_input": "2025-07-29T21:22:11.080741Z",
+     "iopub.status.busy": "2025-07-29T21:22:11.080578Z",
+     "iopub.status.idle": "2025-07-29T21:22:11.082956Z",
+     "shell.execute_reply": "2025-07-29T21:22:11.082510Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:45.662896Z",
-     "iopub.status.busy": "2025-07-29T09:27:45.662726Z",
-     "iopub.status.idle": "2025-07-29T09:27:45.665247Z",
-     "shell.execute_reply": "2025-07-29T09:27:45.664807Z"
+     "iopub.execute_input": "2025-07-29T21:22:11.084414Z",
+     "iopub.status.busy": "2025-07-29T21:22:11.084265Z",
+     "iopub.status.idle": "2025-07-29T21:22:11.086801Z",
+     "shell.execute_reply": "2025-07-29T21:22:11.086363Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:45.666714Z",
-     "iopub.status.busy": "2025-07-29T09:27:45.666532Z",
-     "iopub.status.idle": "2025-07-29T09:27:46.729033Z",
-     "shell.execute_reply": "2025-07-29T09:27:46.728525Z"
+     "iopub.execute_input": "2025-07-29T21:22:11.088283Z",
+     "iopub.status.busy": "2025-07-29T21:22:11.088111Z",
+     "iopub.status.idle": "2025-07-29T21:22:12.135060Z",
+     "shell.execute_reply": "2025-07-29T21:22:12.134450Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpFHJWyG\", R: \"/tmp/RtmpLrwaGn\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpeCyZUH\", R: \"/tmp/RtmpX9nt1x\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:46.730797Z",
-     "iopub.status.busy": "2025-07-29T09:27:46.730618Z",
-     "iopub.status.idle": "2025-07-29T09:27:47.141036Z",
-     "shell.execute_reply": "2025-07-29T09:27:47.140531Z"
+     "iopub.execute_input": "2025-07-29T21:22:12.136967Z",
+     "iopub.status.busy": "2025-07-29T21:22:12.136812Z",
+     "iopub.status.idle": "2025-07-29T21:22:12.541923Z",
+     "shell.execute_reply": "2025-07-29T21:22:12.541304Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:47.142768Z",
-     "iopub.status.busy": "2025-07-29T09:27:47.142557Z",
-     "iopub.status.idle": "2025-07-29T09:27:47.451952Z",
-     "shell.execute_reply": "2025-07-29T09:27:47.451300Z"
+     "iopub.execute_input": "2025-07-29T21:22:12.543709Z",
+     "iopub.status.busy": "2025-07-29T21:22:12.543538Z",
+     "iopub.status.idle": "2025-07-29T21:22:12.863581Z",
+     "shell.execute_reply": "2025-07-29T21:22:12.862988Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:47.453674Z",
-     "iopub.status.busy": "2025-07-29T09:27:47.453473Z",
-     "iopub.status.idle": "2025-07-29T09:27:47.460828Z",
-     "shell.execute_reply": "2025-07-29T09:27:47.460362Z"
+     "iopub.execute_input": "2025-07-29T21:22:12.865122Z",
+     "iopub.status.busy": "2025-07-29T21:22:12.864964Z",
+     "iopub.status.idle": "2025-07-29T21:22:12.871907Z",
+     "shell.execute_reply": "2025-07-29T21:22:12.871469Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:27:47.462252Z",
-     "iopub.status.busy": "2025-07-29T09:27:47.462104Z",
-     "iopub.status.idle": "2025-07-29T09:27:47.883419Z",
-     "shell.execute_reply": "2025-07-29T09:27:47.882814Z"
+     "iopub.execute_input": "2025-07-29T21:22:12.873444Z",
+     "iopub.status.busy": "2025-07-29T21:22:12.873280Z",
+     "iopub.status.idle": "2025-07-29T21:22:13.286144Z",
+     "shell.execute_reply": "2025-07-29T21:22:13.285636Z"
     }
    },
    "outputs": [
