--- a/examples/example09_joss_paper.ipynb
+++ b/examples/example09_joss_paper.ipynb
@@ -8,7 +8,10 @@
     "\n",
     "*Martin Vonk (2025)*\n",
     "\n",
-    "This notebook replicates the results presented in the article submitted to the Journal of Open Source Software ([JOSS](https://joss.theoj.org/)). JOSS is a developer-friendly, open-access academic journal (ISSN 2475-9066) dedicated to research software packages and features a formal peer-review process. The pre-review and review of the SPEI package are publicly available in issues [openjournals/joss-reviews#8430](https://github.com/openjournals/joss-reviews/issues/8430) and [openjournals/joss-reviews#8454](https://github.com/openjournals/joss-reviews/issues/8454), respectively."
+    "This notebook replicates the results presented in the article submitted to the Journal of Open Source Software ([JOSS](https://joss.theoj.org/)). The article can be found here: Vonk, M. A. (2025). SPEI: A Python package for calculating and visualizing drought indices. Journal of Open Source Software, 10(111), 8454. [doi.org/10.21105/joss.08454](https://doi.org/10.21105/joss.08454)\n",
+    "\n",
+    "\n",
+    "JOSS is a developer-friendly, open-access academic journal (ISSN 2475-9066) dedicated to research software packages and features a formal peer-review process. The pre-review and review of the SPEI package are publicly available in issues [openjournals/joss-reviews#8430](https://github.com/openjournals/joss-reviews/issues/8430) and [openjournals/joss-reviews#8454](https://github.com/openjournals/joss-reviews/issues/8454), respectively."
    ]
   },
   {
@@ -23,10 +26,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:12.153556Z",
-     "iopub.status.busy": "2025-07-29T09:28:12.153322Z",
-     "iopub.status.idle": "2025-07-29T09:28:13.088243Z",
-     "shell.execute_reply": "2025-07-29T09:28:13.087741Z"
+     "iopub.execute_input": "2025-07-29T21:22:37.867482Z",
+     "iopub.status.busy": "2025-07-29T21:22:37.867317Z",
+     "iopub.status.idle": "2025-07-29T21:22:38.813122Z",
+     "shell.execute_reply": "2025-07-29T21:22:38.812624Z"
     }
    },
    "outputs": [],
@@ -146,10 +149,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:13.090193Z",
-     "iopub.status.busy": "2025-07-29T09:28:13.089949Z",
-     "iopub.status.idle": "2025-07-29T09:28:13.108394Z",
-     "shell.execute_reply": "2025-07-29T09:28:13.107947Z"
+     "iopub.execute_input": "2025-07-29T21:22:38.815133Z",
+     "iopub.status.busy": "2025-07-29T21:22:38.814883Z",
+     "iopub.status.idle": "2025-07-29T21:22:38.833504Z",
+     "shell.execute_reply": "2025-07-29T21:22:38.833012Z"
     }
    },
    "outputs": [],
@@ -174,10 +177,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:13.109958Z",
-     "iopub.status.busy": "2025-07-29T09:28:13.109804Z",
-     "iopub.status.idle": "2025-07-29T09:28:13.112192Z",
-     "shell.execute_reply": "2025-07-29T09:28:13.111774Z"
+     "iopub.execute_input": "2025-07-29T21:22:38.835055Z",
+     "iopub.status.busy": "2025-07-29T21:22:38.834902Z",
+     "iopub.status.idle": "2025-07-29T21:22:38.837617Z",
+     "shell.execute_reply": "2025-07-29T21:22:38.837120Z"
     }
    },
    "outputs": [],
@@ -192,10 +195,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:13.113732Z",
-     "iopub.status.busy": "2025-07-29T09:28:13.113553Z",
-     "iopub.status.idle": "2025-07-29T09:28:13.836236Z",
-     "shell.execute_reply": "2025-07-29T09:28:13.835666Z"
+     "iopub.execute_input": "2025-07-29T21:22:38.839125Z",
+     "iopub.status.busy": "2025-07-29T21:22:38.838971Z",
+     "iopub.status.idle": "2025-07-29T21:22:39.563290Z",
+     "shell.execute_reply": "2025-07-29T21:22:39.562665Z"
     }
    },
    "outputs": [
@@ -289,10 +292,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:13.837975Z",
-     "iopub.status.busy": "2025-07-29T09:28:13.837799Z",
-     "iopub.status.idle": "2025-07-29T09:28:14.442792Z",
-     "shell.execute_reply": "2025-07-29T09:28:14.442029Z"
+     "iopub.execute_input": "2025-07-29T21:22:39.565060Z",
+     "iopub.status.busy": "2025-07-29T21:22:39.564891Z",
+     "iopub.status.idle": "2025-07-29T21:22:40.175419Z",
+     "shell.execute_reply": "2025-07-29T21:22:40.174737Z"
     }
    },
    "outputs": [],
@@ -319,10 +322,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:14.444987Z",
-     "iopub.status.busy": "2025-07-29T09:28:14.444752Z",
-     "iopub.status.idle": "2025-07-29T09:28:14.842751Z",
-     "shell.execute_reply": "2025-07-29T09:28:14.842121Z"
+     "iopub.execute_input": "2025-07-29T21:22:40.177584Z",
+     "iopub.status.busy": "2025-07-29T21:22:40.177397Z",
+     "iopub.status.idle": "2025-07-29T21:22:40.569451Z",
+     "shell.execute_reply": "2025-07-29T21:22:40.568923Z"
     }
    },
    "outputs": [
@@ -453,10 +456,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:14.844506Z",
-     "iopub.status.busy": "2025-07-29T09:28:14.844344Z",
-     "iopub.status.idle": "2025-07-29T09:28:15.172451Z",
-     "shell.execute_reply": "2025-07-29T09:28:15.171960Z"
+     "iopub.execute_input": "2025-07-29T21:22:40.571138Z",
+     "iopub.status.busy": "2025-07-29T21:22:40.570971Z",
+     "iopub.status.idle": "2025-07-29T21:22:40.901139Z",
+     "shell.execute_reply": "2025-07-29T21:22:40.900593Z"
     }
    },
    "outputs": [
@@ -507,10 +510,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:15.174088Z",
-     "iopub.status.busy": "2025-07-29T09:28:15.173926Z",
-     "iopub.status.idle": "2025-07-29T09:28:19.305502Z",
-     "shell.execute_reply": "2025-07-29T09:28:19.304952Z"
+     "iopub.execute_input": "2025-07-29T21:22:40.902878Z",
+     "iopub.status.busy": "2025-07-29T21:22:40.902703Z",
+     "iopub.status.idle": "2025-07-29T21:22:45.074390Z",
+     "shell.execute_reply": "2025-07-29T21:22:45.073745Z"
     }
    },
    "outputs": [
@@ -567,17 +570,17 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-29T09:28:19.307258Z",
-     "iopub.status.busy": "2025-07-29T09:28:19.307075Z",
-     "iopub.status.idle": "2025-07-29T09:28:19.783898Z",
-     "shell.execute_reply": "2025-07-29T09:28:19.783291Z"
+     "iopub.execute_input": "2025-07-29T21:22:45.076194Z",
+     "iopub.status.busy": "2025-07-29T21:22:45.076013Z",
+     "iopub.status.idle": "2025-07-29T21:22:45.547726Z",
+     "shell.execute_reply": "2025-07-29T21:22:45.547157Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7ac7c8b350>"
+       "<matplotlib.legend.Legend at 0x7fae50af9010>"
       ]
      },
      "execution_count": 9,
